迁移树莓派相关

--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ home = ["HTML", "RSS", "Algolia"]
   sidebar_avatar = "img/avatar.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
 
   featured_tags = true 
-  featured_condition_size = 1 
+  featured_condition_size = 1 # 超过数量在主页显示 FEATURED TAGS
 
   # Baidu Analytics
   ba_track_id = ""
@@ -106,9 +106,6 @@ home = ["HTML", "RSS", "Algolia"]
 #   title = "unsplash"
 #   href = "https://unsplash.com"
   
-  [[params.addtional_menus]]
-  title =  "REACT"
-  href =  "/react/"
   [[params.addtional_menus]]
   title =  "ARCHIVE"
   href =  "/archive/"
