feat: 扩展Hugo主题，添加 Latex 语法

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://chemistwang.github.io/"
 title = "Chemputer Blog"
-theme = "hugo-theme-cleanwhite"
+theme = "hugo-theme-cleanwhite-extend"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
