--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-theme-cleanwhite"]
-	path = themes/hugo-theme-cleanwhite
-	url = https://github.com/zhaohuabing/hugo-theme-cleanwhite.git
+[submodule "themes/hugo-theme-cleanwhite-extend"]
+	path = themes/hugo-theme-cleanwhite-extend
+	url = https://github.com/chemistwang/hugo-theme-cleanwhite-extend
