--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ theme = "hugo-theme-cleanwhite-extend"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
-googleAnalytics = ""
+googleAnalytics = "G-5E5ZJN0DQ4"
 preserveTaxonomyNames = true
 paginate = 5 #frontpage pagination
 hasCJKLanguage = true
